--- a/templates/gps.html
+++ b/templates/gps.html
@@ -85,7 +85,7 @@
             <input type="hidden" id="source" name="source" value="{{ source }}">
             <span style="font-family: Roboto, sans-serif; font-weight: 300; align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id="nodata">
                 <br><br>
-                NO DATA FOR {{ current_day }}/{{ current_month }}/{{ current_year }}
+                NO DATA FOR {{ current_day }}.{{ current_month }}.{{ current_year }}
             </span>
             <style>
                 .new1 div {
@@ -285,7 +285,7 @@
 
             <span style="font-family: Roboto, sans-serif; font-weight: 300; align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id = "data_txt">
                 <br>
-                {{ current_day }}/{{ current_month }}/{{ current_year }}
+                {{ current_day }}.{{ current_month }}.{{ current_year }}
             </span>
 
             <div class="outer-grid" id="figures">
