--- a/templates/data.html
+++ b/templates/data.html
@@ -204,7 +204,7 @@
                     <br>
                                 <table class="center">
                                     <td class="child" style="padding: 10px">
-                                        <button type="submit" formaction="/date-selection" class="btn" style="float: right">Data KLN</button>
+                                        <button type="submit" formaction="/date-selection" class="btn" style="float: right">Data KGD</button>
                                         <input type="hidden" id="source" name="source" value="vlf">
                                     </td>
                                     <td class="child" style="text-align: center; padding: 10px">
