--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -154,7 +154,7 @@
             </table>
                 <span style="font-family: Roboto, sans-serif; font-weight: 300; align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id="nodata">
                     <br><br>
-                    NO DATA FOR {{ current_day }}/{{ current_month }}/{{ current_year }}
+                    NO DATA FOR {{ current_day }}.{{ current_month }}/.{{ current_year }}
                 </span>
                 <input type="hidden" id="button_name" name="button_name" value="">
                 <input type="hidden" id="new_day" name="new_day" value="">
