--- a/templates/data.html
+++ b/templates/data.html
@@ -214,36 +214,28 @@
                     <input type="hidden" id="source" name="source" value="vlf">
             </div>
             <div class="col d-flex" style="justify-content: center; align-items: center; margin: 0; padding: 6px; border: #ffffff;">
-                <div>
-                    <a href="/equipment" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
-{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
+                    <button type="submit" formaction="/date-selection" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
                         Phase MIK
-                    </a>
-                </div>
+                    </button>
+                    <input type="hidden" id="source" name="source" value="vlf">
             </div>
             <div class="col d-flex" style="justify-content: center; align-items: center; margin: 0; padding: 6px; border: #ffffff;">
-                <div>
-                    <a href="/date-selection" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
-{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
+                    <button type="submit" formaction="/date-selection" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
                         Amplitude KGD
-                    </a>
-                </div>
+                    </button>
+                    <input type="hidden" id="source" name="source" value="vlf">
             </div>
             <div class="col d-flex" style="justify-content: center; align-items: center; margin: 0; padding: 6px; border: #ffffff;">
-                <div>
-                    <a href="/date-selection" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
-{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
+                    <button type="submit" formaction="/date-selection" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
                         Phase KGD
-                    </a>
-                </div>
+                    </button>
+                    <input type="hidden" id="source" name="source" value="vlf">
             </div>
             <div class="col d-flex" style="justify-content: center; align-items: center; margin: 0; padding: 6px; border: #ffffff;">
-                <div>
-                    <a href="/contacts" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
-{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
+                    <button type="submit" formaction="/equipment" class="btn" style = "font-size: 16px; justify-content: center; align-items: center; vertical-align: center;">
                         About
-                    </a>
-                </div>
+                    </button>
+                    <input type="hidden" id="source" name="source" value="vlf">
             </div>
         </div>
         </form>
