--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -57,7 +57,8 @@
         }
     </style>
     {#    </div>#}
-    <iframe src="https://yandex.ru/map-widget/v1/-/CBaha6tuKA" width="100%" height="400"
+{#    <iframe src="https://yandex.ru/map-widget/v1/-/CBaha6tuKA" width="100%" height="400"#}
+    <iframe src="https://yandex.ru/map-widget/v1/-/CDfwYFzY" width="100%" height="400"
             frameborder="0"></iframe>
     <footer class="container-fluid bottom_contacts">
         <br>
