--- a/templates/elf.html
+++ b/templates/elf.html
@@ -374,8 +374,8 @@
                 this.querySelector(".close").style.display = "none"; // TODO!!
             });
             oBig.classList.toggle('active');
-            oBig.style.width = `${nWidth / 9.5}vw`;
-            oBig.style.height = `${nHeight / 9.5}vw`;
+            oBig.style.width = `${65}vw`;
+            oBig.style.height = `${65 / nRatio}vw`;
             oBig.style.zIndex = `1` ;
             oBig.style.position = 'absolute;'
             oBig.style.top = oBig.style.left = `50%`;
